Chromium browsers scrollbar partial fix, and signup username error management fix

--- a/src/app/(auth)/login/styles.module.css
+++ b/src/app/(auth)/login/styles.module.css
@@ -10,7 +10,8 @@
 	background-color: var(--cl-gray-800);
 	border-radius: var(--rd-lg);
 	width: 40vw;
-	height: 35vh;
+	min-height: 35vh;
+	max-height: fit-content;
 	padding: var(--sp-8);
 	display: flex;
 	flex-direction: column;
@@ -18,7 +19,7 @@
 
 	@media (max-width: 720px) {
 		width: 85vw;
-		height: 55vh;
+		min-height: 55vh;
 	}
 }
 
